crates/vane-cli/tests/snapshots/cli__diff_against_a_truncated_log.snap
---
source: crates/vane-cli/tests/cli.rs
expression: "run(&[\"diff\", \"good.ulg\", \"truncated.ulg\"])"
---
no parameter differences
