crates/vane-cli/tests/snapshots/cli__diff_reports_what_changed_between_two_flights.snap
---
source: crates/vane-cli/tests/cli.rs
expression: "run(&[\"diff\", \"good.ulg\", \"crash.ulg\"])"
---
- CBRK_IO_SAFETY: 22027
~ MC_PITCHRATE_D: 0.003 -> 0.012
~ MPC_TILTMAX_AIR: 45 -> 60
~ MPC_XY_P: 0.95 -> 1.8
+ MPC_Z_VEL_MAX_UP: 3
