crates/vane-cli/tests/snapshots/cli__info_reports_a_complete_log.snap
---
source: crates/vane-cli/tests/cli.rs
expression: "run(&[\"info\", \"crash.ulg\"])"
---
format:     ulog
log start:  98.765 s
parameters: 7
